fix: NotificationViewMD resize ink_drop_layer and ink_drop_mask

This is necessary as the default implementation of |InkDropHostView| now
recreates its |InkDropRipple|.

Bug: 915222
Change-Id: I8e607effccc3aefdfc178be3e7ff5faa512c0b41
Reviewed-on: https://chromium-review.googlesource.com/c/1395885
Reviewed-by: Peter Beverloo <peter@chromium.org>
Reviewed-by: Mohsen Izadi <mohsen@chromium.org>
Commit-Queue: Richard Knoll <knollr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621211}