ui/message_center/views/notification_view_md.cc
@@ -18,6 +18,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/events/gesture_detection/gesture_provider_config_helper.h"
 #include "ui/gfx/canvas.h"
 #include "ui/gfx/color_palette.h"
+#include "ui/gfx/geometry/rect.h"
 #include "ui/gfx/geometry/size.h"
 #include "ui/gfx/image/image_skia_operations.h"
 #include "ui/gfx/paint_vector_icon.h"
@@ -38,6 +39,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/strings/grit/ui_strings.h"
 #include "ui/views/animation/flood_fill_ink_drop_ripple.h"
 #include "ui/views/animation/ink_drop_highlight.h"
+#include "ui/views/animation/ink_drop_mask.h"
 #include "ui/views/background.h"
 #include "ui/views/border.h"
 #include "ui/views/controls/button/image_button.h"
@@ -604,6 +606,13 @@ void NotificationViewMD::Layout() {
   } else {
     ink_drop_container_->SetBoundsRect(GetLocalBounds());
   }
+}
+
+void NotificationViewMD::OnBoundsChanged(const gfx::Rect& previous_bounds) {
+  if (ink_drop_layer_)
+    ink_drop_layer_->SetBounds(gfx::Rect(size()));
+  if (ink_drop_mask_)
+    ink_drop_mask_->layer()->SetBounds(gfx::Rect(size()));
 }
 
 void NotificationViewMD::OnFocus() {
@@ -1240,6 +1249,8 @@ void NotificationViewMD::UpdateCornerRadius(int top_radius, int bottom_radius) {
   action_buttons_row_->SetBackground(views::CreateBackgroundFromPainter(
       std::make_unique<NotificationBackgroundPainter>(
           0, bottom_radius, kActionsRowBackgroundColor)));
+  top_radius_ = top_radius;
+  bottom_radius_ = bottom_radius;
 }
 
 NotificationControlButtonsView* NotificationViewMD::GetControlButtonsView()
@@ -1307,6 +1318,7 @@ void NotificationViewMD::AddBackgroundAnimation(const ui::Event& event) {
 }
 
 void NotificationViewMD::RemoveBackgroundAnimation() {
+  SetInkDropMode(InkDropMode::OFF);
   AnimateInkDrop(views::InkDropState::HIDDEN, nullptr);
 }
 
@@ -1321,7 +1333,8 @@ void NotificationViewMD::AddInkDropLayer(ui::Layer* ink_drop_layer) {
   settings_done_button_->SetPaintToLayer();
   settings_done_button_->layer()->SetFillsBoundsOpaquely(false);
   ink_drop_container_->AddInkDropLayer(ink_drop_layer);
-  InstallInkDropMask(ink_drop_layer);
+  ink_drop_layer_ = ink_drop_layer;
+  InstallNotificationInkDropMask();
 }
 
 void NotificationViewMD::RemoveInkDropLayer(ui::Layer* ink_drop_layer) {
@@ -1329,16 +1342,36 @@ void NotificationViewMD::RemoveInkDropLayer(ui::Layer* ink_drop_layer) {
   block_all_button_->DestroyLayer();
   dont_block_button_->DestroyLayer();
   settings_done_button_->DestroyLayer();
-  ResetInkDropMask();
+  ink_drop_mask_.reset();
   ink_drop_container_->RemoveInkDropLayer(ink_drop_layer);
   GetInkDrop()->RemoveObserver(this);
+  ink_drop_layer_ = nullptr;
 }
 
 std::unique_ptr<views::InkDropRipple> NotificationViewMD::CreateInkDropRipple()
     const {
   return std::make_unique<views::FloodFillInkDropRipple>(
-      ink_drop_container_->size(), GetInkDropCenterBasedOnLastEvent(),
+      GetPreferredSize(), GetInkDropCenterBasedOnLastEvent(),
       GetInkDropBaseColor(), ink_drop_visible_opacity());
+}
+
+void NotificationViewMD::InstallNotificationInkDropMask() {
+  SkPath path;
+  SkScalar radii[8] = {top_radius_,    top_radius_,    top_radius_,
+                       top_radius_,    bottom_radius_, bottom_radius_,
+                       bottom_radius_, bottom_radius_};
+  gfx::Rect rect(GetPreferredSize());
+  path.addRoundRect(gfx::RectToSkRect(rect), radii);
+  ink_drop_mask_ = std::make_unique<views::PathInkDropMask>(size(), path);
+  ink_drop_layer_->SetMaskLayer(ink_drop_mask_->layer());
+}
+
+std::unique_ptr<views::InkDropMask> NotificationViewMD::CreateInkDropMask()
+    const {
+  // We don't use this as we need access to the |ink_drop_mask_|.
+  // See crbug.com/915222.
+  NOTREACHED();
+  return nullptr;
 }
 
 SkColor NotificationViewMD::GetInkDropBaseColor() const {
